# Computer-Graphics-2

./: CMakeLists.txt  README.md  main  main.cpp
include/classes/: color.h  vec.h
include/glad/: glad.h
include/headers/: cameraClass.h  elementBufferClass.h  lightClass.h  meshClass.h  modelClass.h  shaderClass.h  textureClass.h  vertexArrayClass.h  vertexBufferClass.h  vertexClass.h
resource_files/shaders/: default.frag  default.vert  vertex_shader.glsl
shaders/: fragment_shader.glsl
src/: CMakeLists.txt  glad.c  hello_world.cpp  main.cpp  old_main.cpp  triforce.cpp
src/classes/: cameraClass.cpp  elementBufferClass.cpp  lightClass.cpp  meshClass.cpp  modelClass.cpp  shaderClass.cpp  textureClass.cpp  vertexArrayClass.cpp  vertexBufferClass.cpp
src/lib/: glad.c  stb.cpp
